# unitree-go2w-autonomous-carrier

./: .gitignore  LICENSE  README.md  UNMA.py  bashrc_unitree  monitor_remote.py
go2w/go2w_cmd_vel_control/: CMakeLists.txt  package.xml
go2w/go2w_cmd_vel_control/launch/: go2w_cmd_vel_control.launch.py
go2w/go2w_dd_gng/: CMakeLists.txt
go2w/go2w_dd_gng/DepthSensor_Buggy/: projection.h  rnd.cpp  surfMatching.cpp
go2w/go2w_dd_gng/DepthSensor_Buggy.xcodeproj/: project.pbxproj
go2w/go2w_dd_gng/build_linux/: cmake_install.cmake
go2w/go2w_dd_gng/realsense_ddgng/: README.md  ddgng_realsense.py
go2w/go2w_odom_projector/: package.xml  setup.cfg  setup.py
go2w/go2w_odom_projector/go2w_odom_projector/: odom_projector.py
go2w/go2w_transform_sensor/: package.xml  setup.cfg  setup.py
go2w/go2w_transform_sensor/go2w_transform_sensor/: data_diag.py  ring_cloud.py  transform_cloud.py  utlidar_ground_scan.py
go2w_cmd_vel_control/: CMakeLists.txt  README.md
go2w_cmd_vel_control/launch/: go2w_cmd_vel_control.launch.py
go2w_cmd_vel_control/src/: go2w_cmd_vel_control_node.cpp
go2w_communication/: README.md  package.xml  setup.cfg  setup.py
go2w_communication/go2w_communication/: chat.py  megaphone.py  tts.py  webrtc_speaker.py
go2w_communication/scripts/: fix_shebang.sh
go2w_dd_gng/realsense_ddgng/: CMakeLists.txt
go2w_dd_gng/realsense_ddgng/core/: ddgng_wrapper.cpp  gng.hpp  malloc.h
go2w_description/: CMakeLists.txt  package.xml
go2w_description/launch/: check_joint.launch.py  check_joint.rviz  display.launch.py  display.rviz  display_lio_sam.launch.py  display_lio_sam.rviz
go2w_description/scripts/: robot_description_publisher.py
go2w_description/urdf/: go2w_description.urdf
go2w_description/xacro/: README.md  const.xacro  go2w.xacro  robot.xacro  robot_standing.xacro  sensors.xacro
go2w_description_modified/: CMakeLists.txt  README.md  package.xml
go2w_description_modified/launch/: check_joint.launch.py  display.launch.py
go2w_description_modified/scripts/: robot_description_publisher.py
go2w_description_modified/stl/: XT32XT16.stl
go2w_description_modified/xacro/: go2w.xacro  sensors.xacro
go2w_dlio/: package.xml  setup.cfg  setup.py
go2w_dlio/config/: go2w_dlio_extrinsics.yaml  go2w_dlio_params.yaml  hesai_config.yaml
go2w_dlio/launch/: display_dlio.rviz  go2w_dlio.launch.py
go2w_dlio/resource/: go2w_dlio
go2w_fast_lio2/: CMakeLists.txt  README.md  package.xml
go2w_fast_lio2/config/: fast_lio2_hesai.yaml  fast_lio2_unilidar.yaml  hesai_config.yaml
go2w_fast_lio2/launch/: fast_lio2.launch.py  fast_lio2.rviz  hesai_lidar_xt16_fast_lio2.launch.py  utlidar_fast_lio2.launch.py
go2w_fast_lio2/src/: hesai_to_velodyne_converter.cpp
go2w_imu_publisher/: CMakeLists.txt  package.xml
go2w_imu_publisher/src/: go2w_imu_publisher_node.cpp
go2w_joints_state_publisher/: CMakeLists.txt  package.xml
go2w_joints_state_publisher/include/: Go2JointStatePublisher.h
go2w_joints_state_publisher/src/: go2w_joints_state_publisher_node.cpp
go2w_lio_sam/: CMakeLists.txt  package.xml
go2w_lio_sam/config/: hesai_config.yaml  lio_sam_params.yaml
go2w_lio_sam/launch/: lio_sam.launch.py  lio_sam.rviz
go2w_lio_sam/src/: hesai_to_liosam_converter.cpp  lowstate_to_lio_imu.cpp
go2w_modified_lio_sam/: CMakeLists.txt  package.xml
go2w_nav2/: CMakeLists.txt  README.md  package.xml
go2w_nav2/config/: nav2_params.yaml  nav2_params_mppi.yaml  slam_toolbox_params.yaml
go2w_nav2/launch/: nav2.rviz  nav2_bringup.launch.py  point_lio_nav2.launch.py  slam.launch.py
go2w_nav2/maps/: blank_map.pgm  blank_map.yaml
go2w_nav2/rviz/: nav2.rviz  slam.rviz
go2w_remote_arm/: README.md  package.xml  setup.cfg  setup.py
go2w_remote_arm/go2w_remote_arm/: ik_solver.py  launcher_node.py  teleop_node.py  web_monitor.py
go2w_remote_arm/launch/: demo_servo.launch.py  sim.launch.py  sim.rviz  teleop.launch.py
go2w_remote_arm/skills/: go2w_control_skill.md
go2w_remote_arm/systemd/: go2w-web-monitor.service
go2w_remote_monitor/: README.md  package.xml  setup.cfg  setup.py
go2w_remote_monitor/go2w_remote_monitor/: remote_monitor.py
go2w_sim/: CMakeLists.txt  README.md  package.xml
go2w_sim/config/: go2w_ros2_control.yaml
go2w_sim/launch/: go2w_harmonic.launch.py  go2w_harmonic_ros2_control.launch.py  go2w_harmonic_standing.launch.py  teleop.launch.py
om6dof/dynamixel_hardware_interface/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  dynamixel_hardware_interface_ci.repos  dynamixel_hardware_interface_plugin.xml  package.xml
om6dof/dynamixel_hardware_interface/scripts/: check_model_file_formatting.py  cluster_model_files.py  create_udev_rules  hx_synctable_model_generator.py  xml_to_model_parser.py
om6dof/dynamixel_hardware_interface/src/: dynamixel_hardware_interface.cpp
om6dof/dynamixel_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
om6dof/dynamixel_interfaces/msg/: DynamixelState.msg
om6dof/om6dof_controller/: README.md  package.xml  setup.cfg  setup.py
om_chain_bringup/: CMakeLists.txt  README.md  package.xml
om_chain_bringup/config/: controllers.yaml
om_chain_bringup/launch/: hardware.launch.py
om_chain_bringup/urdf/: om_chain.urdf.xacro  om_chain_description.urdf.xacro  om_chain_ros2_control.xacro
om_chain_pick_place/: README.md  package.xml  setup.cfg  setup.py
om_chain_pick_place/config/: qr_follower.yaml  tag_pick.yaml  waypoints.yaml
om_chain_pick_place/launch/: direct_pick.launch.py  pick_place.launch.py  qr_follower.launch.py  tag_pick_place.launch.py
om_chain_pick_place/om_chain_pick_place/: apriltag_detector.py  calib_gui.py  coordinate_debug_node.py  direct_pick_node.py  moveit_client.py  pick_place_node.py  qr_follower_node.py  tag_calibrate.py  tag_pick_place_node.py
open_manipulator_x_ctrl/: package.xml  setup.cfg  setup.py
open_manipulator_x_ctrl/config/: params.yaml
open_manipulator_x_ctrl/launch/: controller.launch.py  gui.launch.py
open_manipulator_x_ctrl/open_manipulator_x_ctrl/: cli_tools.py  controller_node.py  dxl_driver.py  gui_node.py  kinematics.py
(+440 files in other folders)
