<?xml version="1.0"?>
<package format="3">
  <name>go2w_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Go2W robot.
    This package contains configuration data, 3D models and launch files.
  </description>
  <maintainer email="teukuzikrifatahillah@gmail.com">teuku</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>