<?xml version="1.0"?>
<package format="3">
  <name>go2w_description</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for Go2W robot (original).
    This package contains 3D models, URDF and launch files.
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
