<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_fast_lio2</name>
  <version>0.1.0</version>
  <description>Wrapper launch package for Go2W with FAST-LIO2 and Hesai LiDAR.</description>

  <maintainer email="unitree@example.com">unitree</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2w_description_modified</exec_depend>
  <exec_depend>go2w_joints_state_and_imu_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hesai_ros_driver</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
