<?xml version="1.0"?>
<package format="3">
  <name>go2w_joints_state_publisher</name>
  <version>0.0.0</version>
  <description>Node to publish o2 joint states for RVIZ</description>

  <maintainer email="pheelix@todo.todo">pheelix</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_ros2_example</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
