<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2w_nav2</name>
  <version>0.1.0</version>
  <description>Nav2 navigation stack configuration and launch files for Go2W.</description>

  <maintainer email="unitree@example.com">unitree</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>go2w_description</exec_depend>
  <exec_depend>go2w_fast_lio2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
