<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>om_chain_bringup</name>
  <version>0.1.0</version>
  <description>URDF + ros2_control bringup for 6-DOF OpenManipulator Chain (custom IDs 31,32,33,24,35,26,37). Adapted from ROBOTIS open_manipulator_friends for ROS 2 Humble + this rig's Dynamixel layout.</description>
  <maintainer email="biancanobelia@gmail.com">unitree</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>dynamixel_hardware_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
