<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>om_chain_pick_place</name>
  <version>0.1.0</version>
  <description>Pick-and-place state machine for the 6-DOF OpenManipulator Chain. Talks to MoveIt via the MoveGroup action and to the gripper_controller GripperCommand action; no MoveIt Python bindings required.</description>
  <maintainer email="biancanobelia@gmail.com">unitree</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>om_chain_bringup</exec_depend>
  <exec_depend>om_chain_moveit_config</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
