<?xml version="1.0"?>
<package format="3">
  <name>go2w_cmd_vel_control</name>
  <version>0.1.0</version>
  <description>Bridge ROS 2 cmd_vel to Unitree Go2-W sport API move commands.</description>
  <maintainer email="teukuzikrifatahillah@gmail.com">teuku</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_api</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
